# palautusrepositorio-ohtu

./: MERGE.md  PULL.md  README.md  retro.md
viikko1/nhl-statistics-1/src/: index.py  statistics.py
viikko1/nhl-statistics-1/src/tests/: statistics_test.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project_reader.py  test.py
viikko2/verkkokauppa-1/src/: kauppa.py  pankki.py  varasto.py
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot
viikko3/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko3/web-login-robot/src/services/: user_service.py
viikko3/web-login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko4/: tekstiä.txt
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/tdd-ostoskori/src/: ostoskori.py
viikko4/tdd-ostoskori/src/tests/: ostoskori_test.py
viikko4/verkkokauppa/: .coverage
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/int-joukko/src/: int_joukko.py
viikko5/laskin/src/: index.py  kayttoliittyma.py  sovelluslogiikka.py
viikko5/tennis/src/: tennis_game.py
viikko6/query-language/src/: index.py  matchers.py  query_builder.py
viikko7/kivi-paperi-sakset/src/: index.py  kps.py  tekoaly.py  tekoaly_parannettu.py  toinen_ihminen.py  toinen_pelaaja.py
