[tool.poetry]
name = "y"
version = "0.1.0"
description = ""
authors = ["HeljaeRaeisaenen <94612974+HeljaeRaeisaenen@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]
pylint = "^2.15.5"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
